Archive2/3a/3525c3428216de/output
main.cpp:30:30: error: 'static vec2<T, MapSpace> SpaceConversions<T>::transform(vec2<T, CameraSpace>)' cannot be overloaded
     static vec2<T, MapSpace> transform(vec2<T, CameraSpace> in) {
                              ^
main.cpp:23:33: error: with 'static vec2<T, WindowSpace> SpaceConversions<T>::transform(vec2<T, CameraSpace>)'
     static vec2<T, WindowSpace> transform(vec2<T, CameraSpace> in) {
                                 ^
main.cpp:34:33: error: 'static vec2<T, CameraSpace> SpaceConversions<T>::transform(vec2<T, WindowSpace>)' cannot be overloaded
     static vec2<T, CameraSpace> transform(vec2<T, WindowSpace> in) {
                                 ^
main.cpp:27:30: error: with 'static vec2<T, MapSpace> SpaceConversions<T>::transform(vec2<T, WindowSpace>)'
     static vec2<T, MapSpace> transform(vec2<T, WindowSpace> in) {
                              ^
main.cpp:37:33: error: 'static vec2<T, CameraSpace> SpaceConversions<T>::transform(vec2<T, MapSpace>)' cannot be overloaded
     static vec2<T, CameraSpace> transform(vec2<T, MapSpace> in) {
                                 ^
main.cpp:20:33: error: with 'static vec2<T, WindowSpace> SpaceConversions<T>::transform(vec2<T, MapSpace>)'
     static vec2<T, WindowSpace> transform(vec2<T, MapSpace> in) {
                                 ^
